--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -16,6 +16,7 @@
                             <a href="{{ page.url }}">{{ page.title }}</a>
                         </li>
                     {% endfor %}
+                    <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a><br />
                 </ul>
                 {% else %}
                     <strong>No pages currently in category.</strong>
