--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<head>
-    <title>Rango</title>
-</head>
-<body>
-    <h1>Add Category</h1>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
+
+{% block title_block %}
+    Add a page
+{% endblock %}
+
+{% block body_block %}
+<h1>Add Category</h1>
     <div>
         <form id="category_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
             {% csrf_token %}
@@ -18,4 +21,4 @@
             <input type="submit" name="submit" value="Create  Page" />
         </form>
     </div>
-</body>
+{% endblock %}
