--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-<head>
-<title>Rango</title>
-</head>
-<body>
+
+{% block title_block %}
+    Homepage
+{% endblock %}
+
+{% block body_block %}
 <h1>Rango says...</h1>
 <div>
 hey there partner! <br />
@@ -37,11 +38,6 @@ hey there partner! <br />
     {% else %}
     <strong>There are no pages present.</strong>
     {% endif %}
-</div><br />
-<div>
-<a href="{% url 'rango:about' %}">About</a><br />
-<a href="/rango/add_category/">Add a New Category</a><br />
-<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 </div>
-</body>
-</html>
+<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+{% endblock %}
