--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -9,6 +9,7 @@ About Rango
     <h1>Rango says...</h1>
     <div>
     here is the about page. <br />
+    Visits: {{ visits }} <br />
     <strong>This tutorial has been put together by Dannielle</strong><br />
     </div>
     <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" /><br />
